# RenderFactory

./: CMakeLists.txt  README.md  glad.c  main.cpp  main2.cpp
application/: CMakeLists.txt  application.cpp  application.h
funcs/: CMakeLists.txt  func.cpp
lib/: glfw3.lib
wrapper/: CMakeLists.txt  checkError.cpp  checkError.h
